api 추가 + 테스트 + swagger

--- a/src/resources/test.html
+++ b/src/resources/test.html
@@ -11,7 +11,7 @@
     <input multiple="multiple" type="file" name="images">
     <input type="hidden" name="token" value="dev">
     <input type="hidden" name="email" value="hayman42@naver.com">
-    <input type="hidden" name="name" value="한재연">
+    <input type="hidden" name="author" value="test">
     <input type="hidden" name="title" value="hello">
     <input type="hidden" name="content" value="post">
     <input type="hidden" name="link" value="https://a.com">
@@ -33,3 +33,7 @@
     <input name="token" placeholder="token">
     <button type="submit" class="btn btn-primary">Quit</button>
 </form>
+
+<script>
+    document.cookie = "token=test";
+</script>
